# coupon-management

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/db/: database.py
app/models/: __init__.py  coupon.py  schemas.py
app/router/: __init__.py  coupon_router.py
app/scripts/: Coupon Mgmt.postman_collection.json  setup_database.sql
app/services/: coupon_service.py
app/test/: test_coupon_service.py
